--- a/README.mdx
+++ b/README.mdx
@@ -41,7 +41,7 @@ npm run client
 ####  Navigate to the client directory
 ```
 cd client
-npm install
+npm run dev
 ```
 
 ### Build & Previewing the Built App
