--- a/README.mdx
+++ b/README.mdx
@@ -10,7 +10,7 @@ Designed with a focus on cleanliness and usability, my interface showcases image
 
 Explore additional features such as pagination and infinite scroll for endless browsing pleasure, all while adhering to strict code style conventions to ensure clean, maintainable code that facilitates future enhancements.
 
-### Installation
+## Installation
 
 #### Clone the repository
 ```
@@ -26,7 +26,7 @@ npm install
 ```
 
 
-### Running the App
+## Running the App
 
 In Development Mode:
 
@@ -44,7 +44,7 @@ cd client
 npm run dev
 ```
 
-### Build & Previewing the Built App
+## Build & Previewing the Built App
 
 You can build and preview the built app using one of the following methods:
 
@@ -68,7 +68,7 @@ and run this after the app is built:
 npm run preview
 ```
 
-### Testing the app
+## Testing the app
 You can test app using one of the following methods:
 
 #### From the root directory
@@ -179,11 +179,37 @@ Vitest seamlessly integrates with Vite plugins, allowing developers to leverage 
 - **User-Friendly Documentation**
 Vitest provides comprehensive and user-friendly documentation, making it easier for developers to get started and find solutions to common issues. The documentation includes examples, guides, and detailed API references.
 
----
-
 These advantages make Vitest a compelling choice for modern web development projects, offering a combination of speed, simplicity, and powerful features that streamline the testing process.
 
 
 ---
 
 These packages are essential for enhancing development, testing, and performance optimization in your React application. Each package brings unique advantages that contribute to efficient development practices and improved user experience.
+
+
+---
+
+### Showcasing My Frontend Skills: A Journey Through Modern Web Development Techniques
+
+In this test project, I have meticulously crafted an app that not only meets the specified requirements but also highlights my proficiency with cutting-edge frontend technologies. By leveraging ReactJS, Redux Toolkit, TypeScript, and other powerful tools and techniques, I have demonstrated my capability to build efficient, scalable, and user-friendly applications. Dive into my thought process and discover the innovative solutions I've implemented to deliver a top-notch web development experience:
+
+My goal in developing this app was to create a Minimum Viable Product (MVP) that closely adheres to the provided specifications, if not matching them exactly. As I am applying for a Frontend ReactJS Developer position, I chose to use ReactJS for this project, though I could have opted for NextJS. I wanted to demonstrate my proficiency with the technology most relevant to the role.
+
+In addition to building a functional and visually appealing app, I aimed to ensure a pleasurable and efficient development experience. To achieve this, I utilized a selection of packages that streamline the development process:
+
+Styling and Components: I incorporated both Bootstrap and Tailwind CSS for styling. These frameworks enabled me to create a responsive and visually consistent interface quickly.
+
+TypeScript: Given our discussion about TypeScript during the interview, I chose it over JavaScript to showcase my ability to write type-safe code.
+Data Fetching: For data fetching, I used Axios. Additionally, I demonstrated my capability with SWR, which provides features like caching and an optimistic UI right out of the box.
+
+State Management: I implemented Redux using Redux Toolkit, which significantly reduces boilerplate code and offers numerous benefits over traditional Redux.
+Performance Optimization: I incorporated lazy loading to enhance performance and ensure a smooth user experience.
+Routing: React Router DOM was used to manage navigation within the app.
+
+Testing: I opted for Vitest as my testing framework, which integrates seamlessly with Vite. Vitest offers minimal configuration and is as powerful as other popular testing libraries like Jest and Cypress.
+
+While some of these technologies might seem extensive for an MVP, my intention was to showcase my full range of skills and what I can bring to your company if given the opportunity. I am confident that this project highlights my ability to create efficient, maintainable, and high-performance web applications.
+
+I look forward to the possibility of contributing to your team and discussing how my skills and experiences align with your needs.
+
+I hope to hear from you soon.
