--- a/README.mdx
+++ b/README.mdx
@@ -197,19 +197,22 @@ My goal in developing this app was to create a Minimum Viable Product (MVP) that
 
 In addition to building a functional and visually appealing app, I aimed to ensure a pleasurable and efficient development experience. To achieve this, I utilized a selection of packages that streamline the development process:
 
-Styling and Components: I incorporated both Bootstrap and Tailwind CSS for styling. These frameworks enabled me to create a responsive and visually consistent interface quickly.
+- **Styling and Components**: I incorporated both Bootstrap and Tailwind CSS for styling. These frameworks enabled me to create a responsive and visually consistent interface quickly.
 
-TypeScript: Given our discussion about TypeScript during the interview, I chose it over JavaScript to showcase my ability to write type-safe code.
+- **TypeScript**: Given our discussion about TypeScript during the interview, I chose it over JavaScript to showcase my ability to write type-safe code.
 Data Fetching: For data fetching, I used Axios. Additionally, I demonstrated my capability with SWR, which provides features like caching and an optimistic UI right out of the box.
 
-State Management: I implemented Redux using Redux Toolkit, which significantly reduces boilerplate code and offers numerous benefits over traditional Redux.
-Performance Optimization: I incorporated lazy loading to enhance performance and ensure a smooth user experience.
+- **State Management**: I implemented Redux using Redux Toolkit, which significantly reduces boilerplate code and offers numerous benefits over traditional Redux.
+
+- **Performance Optimization**: I incorporated lazy loading to enhance performance and ensure a smooth user experience.
 Routing: React Router DOM was used to manage navigation within the app.
 
-Testing: I opted for Vitest as my testing framework, which integrates seamlessly with Vite. Vitest offers minimal configuration and is as powerful as other popular testing libraries like Jest and Cypress.
+- **Testing**: I opted for Vitest as my testing framework, which integrates seamlessly with Vite. Vitest offers minimal configuration and is as powerful as other popular testing libraries like Jest and Cypress.
 
 While some of these technologies might seem extensive for an MVP, my intention was to showcase my full range of skills and what I can bring to your company if given the opportunity. I am confident that this project highlights my ability to create efficient, maintainable, and high-performance web applications.
 
 I look forward to the possibility of contributing to your team and discussing how my skills and experiences align with your needs.
 
 I hope to hear from you soon.
+
+Denver
