--- a/README.mdx
+++ b/README.mdx
@@ -200,12 +200,15 @@ In addition to building a functional and visually appealing app, I aimed to ensu
 - **Styling and Components**: I incorporated both Bootstrap and Tailwind CSS for styling. These frameworks enabled me to create a responsive and visually consistent interface quickly.
 
 - **TypeScript**: Given our discussion about TypeScript during the interview, I chose it over JavaScript to showcase my ability to write type-safe code.
-Data Fetching: For data fetching, I used Axios. Additionally, I demonstrated my capability with SWR, which provides features like caching and an optimistic UI right out of the box.
+Data Fetching: 
+
+- **For data fetching**, I used Axios. Additionally, I demonstrated my capability with SWR, which provides features like caching and an optimistic UI right out of the box.
 
 - **State Management**: I implemented Redux using Redux Toolkit, which significantly reduces boilerplate code and offers numerous benefits over traditional Redux.
 
 - **Performance Optimization**: I incorporated lazy loading to enhance performance and ensure a smooth user experience.
-Routing: React Router DOM was used to manage navigation within the app.
+
+- **Routing**: React Router DOM was used to manage navigation within the app.
 
 - **Testing**: I opted for Vitest as my testing framework, which integrates seamlessly with Vite. Vitest offers minimal configuration and is as powerful as other popular testing libraries like Jest and Cypress.
 
