enhanced readme // removed coverage files

--- a/README.mdx
+++ b/README.mdx
@@ -206,7 +206,7 @@ Data Fetching:
 
 - **State Management**: I implemented Redux using Redux Toolkit, which significantly reduces boilerplate code and offers numerous benefits over traditional Redux.
 
-- **Performance Optimization**: I incorporated lazy loading to enhance performance and ensure a smooth user experience.
+- **Performance Optimization**: I incorporated lazy loading to enhance performance and ensure a smooth user experience. Furthermore, I implemented infinite scrolling and client-side caching to improve data retrieval efficiency and user engagement.
 
 - **Routing**: React Router DOM was used to manage navigation within the app.
 
