refactored PhotoContainer // implemented useDeferred hook // created ErrorhandlerPage, Fallbackpage, LoadingSpinner component, PlaceholderPhotoCards // refactored the StyledInput to have the snappy feel when typing // implemented React Suspense and ErrorBoundary

--- a/README.mdx
+++ b/README.mdx
@@ -2,29 +2,33 @@
 
 ### Description
 
-Welcome to the Image Viewer App, where stunning visuals meet seamless functionality. Harnessing the power of React and JSX, we've crafted an immersive user experience that brings your favorite images front and center. 
+Welcome to the Image Viewer App, where stunning visuals meet seamless functionality. Harnessing the power of React and JSX, we've crafted an immersive user experience that brings your favorite images front and center.
 
-My app fetches images from the JSON Placeholder API, ensuring a vast library of high-quality visuals at your fingertips. State-of-the-art Redux integration ensures robust state management, while advanced search and filtering capabilities empower users to effortlessly discover the perfect image. 
+My app fetches images from the JSON Placeholder API, ensuring a vast library of high-quality visuals at your fingertips. State-of-the-art Redux integration ensures robust state management, while advanced search and filtering capabilities empower users to effortlessly discover the perfect image.
 
-Designed with a focus on cleanliness and usability, my interface showcases images in a grid layout with titles, ensuring a delightful browsing experience across desktops, tablets, and mobile phones. Rigorous unit tests with Jest and React Testing Library guarantee code quality and maintainability, while performance optimization techniques like lazy loading and caching ensure lightning-fast responsiveness. 
+Designed with a focus on cleanliness and usability, my interface showcases images in a grid layout with titles, ensuring a delightful browsing experience across desktops, tablets, and mobile phones. Rigorous unit tests with Vitest and React Testing Library guarantee code quality and maintainability, while performance optimization techniques like lazy loading and caching ensure lightning-fast responsiveness.
 
 Explore additional features such as pagination and infinite scroll for endless browsing pleasure, all while adhering to strict code style conventions to ensure clean, maintainable code that facilitates future enhancements.
 
 ## Installation
 
 #### Clone the repository
+
 ```
 git clone https://github.com/manuelMarkDenver/images-fetcher-app.git
 ```
+
 #### Navigate into the project directory
+
 ```
 cd client
 ```
+
 #### Install dependencies
+
 ```
 npm install
 ```
-
 
 ## Running the App
 
@@ -33,12 +37,15 @@ In Development Mode:
 You can run the app in development mode using one of the following methods:
 
 #### From the root directory
+
 ```
 npm run client
 ```
 
 --- or ---
-####  Navigate to the client directory
+
+#### Navigate to the client directory
+
 ```
 cd client
 npm run dev
@@ -49,42 +56,55 @@ npm run dev
 You can build and preview the built app using one of the following methods:
 
 #### From the root directory
+
 ```
 npm run client:build
-````
-and run this after the app is built: 
+```
+
+and run this after the app is built:
+
 ```
 npm run client:preview
 ```
 
 --- or ---
 
-####  Navigate to the client directory
+#### Navigate to the client directory
+
 ```
 npm run build
 ```
-and run this after the app is built: 
+
+and run this after the app is built:
+
 ```
 npm run preview
 ```
 
 ## Testing the app
+
 You can test app using one of the following methods:
 
 #### From the root directory
+
 ```
-npm run client:test 
+npm run client:test
 ```
+
 or
+
 ```
 npm run client-ui
 ```
 
 #### Directly from the client directory
+
 ```
 npm run test
 ```
+
 or
+
 ```
 npm run test:ui
 ```
@@ -102,6 +122,30 @@ This document provides an overview of key packages used in the project, along wi
 - **Simplified Redux Setup:** Provides a streamlined API for configuring Redux, reducing boilerplate code.
 - **Immutable Updates:** Encourages immutable updates with utilities like `createSlice` and `createReducer`.
 - **DevTools Integration:** Seamless integration with Redux DevTools for debugging.
+
+#### _react-router-dom_
+
+**Description:** React Router DOM is a popular routing library for React applications, facilitating navigation and rendering of components based on the URL.
+
+**Advantages:**
+
+- **Declarative Routing:** React Router DOM employs a declarative approach, enabling developers to define routes directly within React components. This simplifies navigation management and enhances code readability by integrating routing logic seamlessly with UI components.
+
+- **Nested Routing:** React Router DOM supports nested routes, allowing developers to structure complex application layouts and hierarchical navigation structures effortlessly. This modularity enhances scalability and organization by compartmentalizing UI components based on their functionality and user interaction flow.
+
+- **Dynamic Route Matching:** Developers can leverage React Router DOM's dynamic route matching capabilities to parameterize routes (e.g., `/users/:id`). This feature facilitates dynamic content rendering and contextual data handling within a unified route structure, enhancing flexibility and adaptability in application design.
+
+- **History Management:** Integrated with the browser's history API, React Router DOM provides robust history management functionalities. This enables seamless navigation through the application's history stack, maintaining consistent user experience across navigation actions.
+
+- **Query Parameters:** React Router DOM includes utilities for managing query parameters, facilitating dynamic data exchange between components based on URL-driven criteria. Developers can easily extract, manipulate, and respond to query parameters within their application's routing structure.
+
+- **Location Awareness:** Utilizing hooks like `useLocation`, React Router DOM offers real-time access to the current URL location. This feature empowers developers to conditionally render components based on specific URL paths or query parameters, ensuring responsive and context-aware user interfaces.
+
+- **Transition Control:** React Router DOM provides built-in support for controlling route transitions and animations, enhancing visual appeal and user interaction during navigation. Developers can implement custom transition effects between routes, optimizing the overall user experience.
+
+React Router DOM's feature-rich toolkit enables developers to build scalable and maintainable single-page applications (SPAs) with intuitive navigation and state management. By combining declarative routing with advanced capabilities such as nested routing and dynamic route matching, React Router DOM supports versatile application architectures tailored to diverse user requirements.
+
+
 
 #### _react-bootstrap_
 
@@ -150,42 +194,40 @@ This document provides an overview of key packages used in the project, along wi
 **Advantages:**
 
 - **Fast and Efficient**
-Vitest is designed to be fast and efficient, with a focus on speed. It leverages Vite's build tool, enabling instant server start and hot module replacement, which results in quicker test runs compared to traditional testing frameworks.
+  Vitest is designed to be fast and efficient, with a focus on speed. It leverages Vite's build tool, enabling instant server start and hot module replacement, which results in quicker test runs compared to traditional testing frameworks.
 
 - **Zero Config**
-Vitest works out of the box with minimal configuration required. It automatically understands and works with the existing Vite setup, making it easy to integrate into projects without extensive setup.
+  Vitest works out of the box with minimal configuration required. It automatically understands and works with the existing Vite setup, making it easy to integrate into projects without extensive setup.
 
 - **TypeScript Support**
-Vitest has first-class support for TypeScript, ensuring type-safe tests and seamless integration with TypeScript-based projects. This is particularly beneficial for developers working in a TypeScript ecosystem.
+  Vitest has first-class support for TypeScript, ensuring type-safe tests and seamless integration with TypeScript-based projects. This is particularly beneficial for developers working in a TypeScript ecosystem.
 
 - **Powerful Mocking**
-Vitest provides a robust mocking system, allowing developers to easily mock modules, functions, and components. This enhances testing capabilities by enabling precise control over dependencies and their behaviors during tests.
+  Vitest provides a robust mocking system, allowing developers to easily mock modules, functions, and components. This enhances testing capabilities by enabling precise control over dependencies and their behaviors during tests.
 
 - **Rich API**
-Vitest offers a rich and flexible API, allowing developers to write expressive and comprehensive tests. Its API includes features for testing various aspects of applications, from unit tests to integration tests.
+  Vitest offers a rich and flexible API, allowing developers to write expressive and comprehensive tests. Its API includes features for testing various aspects of applications, from unit tests to integration tests.
 
 - **Built-in Coverage Reporting**
-Vitest includes built-in support for code coverage reporting, helping developers track which parts of their codebase are being tested and identifying areas that need more test coverage.
+  Vitest includes built-in support for code coverage reporting, helping developers track which parts of their codebase are being tested and identifying areas that need more test coverage.
 
 - **Snapshot Testing**
-Vitest supports snapshot testing out of the box, enabling developers to capture and compare the output of components and functions over time, ensuring consistency and detecting unexpected changes.
+  Vitest supports snapshot testing out of the box, enabling developers to capture and compare the output of components and functions over time, ensuring consistency and detecting unexpected changes.
 
 - **Community and Ecosystem**
-As part of the Vite ecosystem, Vitest benefits from a growing community and ecosystem. It aligns well with other modern tools and libraries, making it a suitable choice for contemporary JavaScript and TypeScript projects.
+  As part of the Vite ecosystem, Vitest benefits from a growing community and ecosystem. It aligns well with other modern tools and libraries, making it a suitable choice for contemporary JavaScript and TypeScript projects.
 
 - **Seamless Integration with Vite Plugins**
-Vitest seamlessly integrates with Vite plugins, allowing developers to leverage the full power of the Vite ecosystem during testing. This includes support for various preprocessors and tools used in the build process.
+  Vitest seamlessly integrates with Vite plugins, allowing developers to leverage the full power of the Vite ecosystem during testing. This includes support for various preprocessors and tools used in the build process.
 
 - **User-Friendly Documentation**
-Vitest provides comprehensive and user-friendly documentation, making it easier for developers to get started and find solutions to common issues. The documentation includes examples, guides, and detailed API references.
+  Vitest provides comprehensive and user-friendly documentation, making it easier for developers to get started and find solutions to common issues. The documentation includes examples, guides, and detailed API references.
 
 These advantages make Vitest a compelling choice for modern web development projects, offering a combination of speed, simplicity, and powerful features that streamline the testing process.
-
 
 ---
 
 These packages are essential for enhancing development, testing, and performance optimization in your React application. Each package brings unique advantages that contribute to efficient development practices and improved user experience.
-
 
 ---
 
@@ -200,7 +242,6 @@ In addition to building a functional and visually appealing app, I aimed to ensu
 - **Styling and Components**: I incorporated both Bootstrap and Tailwind CSS for styling. These frameworks enabled me to create a responsive and visually consistent interface quickly.
 
 - **TypeScript**: Given our discussion about TypeScript during the interview, I chose it over JavaScript to showcase my ability to write type-safe code.
-Data Fetching: 
 
 - **For data fetching**, I used Axios. Additionally, I demonstrated my capability with SWR, which provides features like caching and an optimistic UI right out of the box.
 
@@ -208,9 +249,9 @@ Data Fetching:
 
 - **Performance Optimization**: I incorporated lazy loading to enhance performance and ensure a smooth user experience. Furthermore, I implemented infinite scrolling and client-side caching to improve data retrieval efficiency and user engagement.
 
-- **Routing**: React Router DOM was used to manage navigation within the app.
+- **Error Handling and User Experience:**: I implemented React's and React Router Dom's Error Boundary to gracefully handle unexpected errors and ensure a seamless user experience. Additionally, I utilized React's Suspense and useDeferred features to optimize data loading and rendering, providing users with faster interactions and smoother transitions throughout the application.
 
-- **Testing**: I opted for Vitest as my testing framework, which integrates seamlessly with Vite. Vitest offers minimal configuration and is as powerful as other popular testing libraries like Jest and Cypress.
+- **Testing**: I opted for Vitest as my testing framework, which integrates seamlessly with Vite. Vitest offers minimal configuration and is as powerful as other popular testing libraries like Vitest and Cypress.
 
 While some of these technologies might seem extensive for an MVP, my intention was to showcase my full range of skills and what I can bring to your company if given the opportunity. I am confident that this project highlights my ability to create efficient, maintainable, and high-performance web applications.
 
